Fixed wrapping images

--- a/resources/assets/sass/page/_home.scss
+++ b/resources/assets/sass/page/_home.scss
@@ -137,6 +137,8 @@
     
     
     div {
+        white-space: nowrap;
+        overflow: hidden;
         text-align: center;
     }
     
